<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ariak</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="main_header_monitoredProcesses">Monitored Processes</string>

    <string name="settings_header_monitoredProcesses">Add/Remove Monitored Processes</string>
    <string name="settings_addLine_button_monitoredProcess">+</string>


    <string name="about_titleSuffix">About</string>
    <string name="about_appInfo">App Run Indicator And Killer (Ariak) was created for my personal usage.  Some apps make it hard to determine if they are still running in the background.  Skype for example is such an app where it is hard to tell if Skype is still running in the background and accepting calls. For these I wanted a way to be alerted so that the app can be shut down is so desired.</string>
    <string name="about_donation"></string>
    <string name="about_legalese">Use with care. No warranty of any kind is given.</string>
    <string name="about_author_label">Author:</string>
    <string name="about_author_value">Claus Niesen</string>
    <string name="about_url">https://github.com/cniesen/ariak</string>

</resources>